--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- Logo -->
             <div class="logo-section">
                 <div class="logo-icon">🌙</div>
-                <h1 class="logo-title">Nyx Studio</h1>
+                <h1 class="logo-title">Nyx Studio测试</h1>
                 <p class="logo-subtitle">接待管理系统</p>
             </div>
 
