--- a/index.html
+++ b/index.html
@@ -8,24 +8,191 @@
     <meta name="description" content="Nyx Studio 塔罗牌工作室接待管理系统">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;600;700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;600;700&family=Cormorant+Garamond:wght@400;500;600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
     <!-- Supabase JS -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Noto Sans SC', sans-serif;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: url('bg-floral.jpg') center center / cover no-repeat fixed;
+            position: relative;
+        }
+
+        /* 登录卡片 */
+        .login-container {
+            position: relative;
+            z-index: 1;
+            width: 100%;
+            max-width: 380px;
+            padding: 20px;
+        }
+
+        .login-card {
+            background: rgba(255, 255, 255, 0.75);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border-radius: 20px;
+            padding: 40px 32px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.08);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+        }
+
+        /* Logo 部分 */
+        .logo-section {
+            text-align: center;
+            margin-bottom: 32px;
+        }
+
+        .moon-icon {
+            font-size: 48px;
+            margin-bottom: 16px;
+            filter: drop-shadow(0 2px 8px rgba(200, 180, 140, 0.5));
+        }
+
+        .logo-title {
+            font-family: 'Cormorant Garamond', serif;
+            font-size: 36px;
+            font-weight: 500;
+            color: #5a4a5a;
+            letter-spacing: 2px;
+            margin-bottom: 8px;
+        }
+
+        .logo-subtitle {
+            font-size: 14px;
+            color: #8a7a8a;
+            letter-spacing: 4px;
+        }
+
+        .logo-subtitle::before,
+        .logo-subtitle::after {
+            content: '~✿~';
+            margin: 0 8px;
+            opacity: 0.6;
+        }
+
+        /* 表单样式 */
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-label {
+            display: block;
+            font-size: 14px;
+            color: #6a5a6a;
+            margin-bottom: 8px;
+            font-weight: 500;
+        }
+
+        .form-input {
+            width: 100%;
+            padding: 14px 16px;
+            border: 1px solid rgba(160, 140, 150, 0.3);
+            border-radius: 10px;
+            font-size: 15px;
+            background: rgba(255, 255, 255, 0.6);
+            color: #4a3a4a;
+            transition: all 0.3s ease;
+        }
+
+        .form-input::placeholder {
+            color: #a090a0;
+        }
+
+        .form-input:focus {
+            outline: none;
+            border-color: rgba(140, 110, 140, 0.5);
+            background: rgba(255, 255, 255, 0.85);
+            box-shadow: 0 0 0 3px rgba(160, 130, 160, 0.15);
+        }
+
+        /* 登录按钮 */
+        .login-btn {
+            width: 100%;
+            padding: 16px;
+            border: none;
+            border-radius: 25px;
+            font-size: 16px;
+            font-weight: 500;
+            color: #fff;
+            background: linear-gradient(135deg, #c9b8c9 0%, #a090a0 50%, #8a7a8a 100%);
+            cursor: pointer;
+            transition: all 0.3s ease;
+            margin-top: 8px;
+            box-shadow: 0 4px 15px rgba(130, 110, 130, 0.3);
+            letter-spacing: 2px;
+        }
+
+        .login-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(130, 110, 130, 0.4);
+        }
+
+        .login-btn:active {
+            transform: translateY(0);
+        }
+
+        .login-btn:disabled {
+            opacity: 0.7;
+            cursor: not-allowed;
+            transform: none;
+        }
+
+        /* 注册链接 */
+        .register-link {
+            text-align: center;
+            margin-top: 24px;
+            font-size: 13px;
+            color: #8a7a8a;
+        }
+
+        .register-link a {
+            color: #7a6080;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .register-link a:hover {
+            color: #5a4060;
+            text-decoration: underline;
+        }
+
+        /* 错误消息 */
+        .error-message {
+            background: rgba(200, 100, 100, 0.15);
+            color: #904040;
+            padding: 12px 16px;
+            border-radius: 8px;
+            font-size: 13px;
+            margin-bottom: 16px;
+            text-align: center;
+        }
+
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
-    <!-- 背景装饰 -->
-    <div class="bg-decoration"></div>
-    <div class="stars-container"></div>
-
     <!-- 主内容 -->
-    <div class="main-content page-center">
-        <div class="card" style="max-width: 420px; width: 100%;">
+    <div class="login-container">
+        <div class="login-card">
             <!-- Logo -->
             <div class="logo-section">
-                <div class="logo-icon">🌙</div>
+                <div class="moon-icon">🌙</div>
                 <h1 class="logo-title">Nyx Studio</h1>
                 <p class="logo-subtitle">接待管理系统</p>
             </div>
@@ -44,12 +211,10 @@
 
                 <div id="errorMessage" class="error-message hidden"></div>
 
-                <button type="submit" id="loginBtn" class="btn btn-primary btn-full mb-4">登录</button>
+                <button type="submit" id="loginBtn" class="login-btn">登录</button>
 
-                <div class="text-center">
-                    <button type="button" class="btn-link" onclick="navigateTo('register.html')">
-                        ✨ 新人入驻？在这注册哦！
-                    </button>
+                <div class="register-link">
+                    ✿ 新人入职？<a href="register.html">点这注册哦！</a>
                 </div>
             </form>
         </div>
@@ -66,9 +231,9 @@
         if (currentUser) {
             console.log('用户已登录:', currentUser.name);
             if (currentUser.role === 'manager') {
-                navigateTo('manager.html');
+                window.location.href = 'manager.html';
             } else {
-                navigateTo('receptionist.html');
+                window.location.href = 'receptionist.html';
             }
         }
 
