--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;600;700&family=Cormorant+Garamond:wght@400;500;600&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400&family=Great+Vibes&display=swap"
         rel="stylesheet">
     <!-- Supabase JS -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -40,13 +40,17 @@
         }
 
         .login-card {
-            background: rgba(255, 255, 255, 0.75);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
+            background-color: rgba(255, 255, 255, 0.92);
+            background-image: url('bg-floral.jpg');
+            background-size: cover;
+            background-position: center;
+            background-blend-mode: overlay;
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
             border-radius: 20px;
             padding: 40px 32px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.08);
-            border: 1px solid rgba(255, 255, 255, 0.5);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+            border: 1px solid rgba(180, 160, 180, 0.25);
         }
 
         /* Logo 部分 */
@@ -62,12 +66,13 @@
         }
 
         .logo-title {
-            font-family: 'Cormorant Garamond', serif;
-            font-size: 36px;
+            font-family: 'Playfair Display', serif;
+            font-size: 38px;
             font-weight: 500;
             color: #5a4a5a;
-            letter-spacing: 2px;
+            letter-spacing: 3px;
             margin-bottom: 8px;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.05);
         }
 
         .logo-subtitle {
