--- a/submit-order.html
+++ b/submit-order.html
@@ -103,7 +103,7 @@
             
             <div class="form-group" id="amountGroup">
               <label class="form-label">金额</label>
-              <input type="number" id="amount" class="form-input" placeholder="请输入金额">
+              <input type="number" id="amount" class="form-input" placeholder="请输入金额" step="0.01">
               <p class="form-hint" id="amountHint">允许金额：${allowedNormalAmounts.slice().sort((a, b) => a - b).join('、')}</p>
             </div>
             
